--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/93a6073045.js" crossorigin="anonymous"></script>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="public/css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <header id="logo-omf">
         <img src="images/logo/ohmyfood.png" alt="logo oh my food">
         <div class="localisation">
-        <div id="map"><i class="fas fa-map-marker-alt"></i>
-            <span>Paris, Belleville</span>
-        </div>
+            <div id="map"><i class="fas fa-map-marker-alt"></i>
+                <span>Paris, Belleville</span>
+            </div>
         </div>
 
         <div class="hero">
@@ -27,35 +27,100 @@
     </header>
 
     <main>
-           <section class="hiw">
-            <h1>Fonctionnement</h1>
-            <div> class="hiw_steps">
-                <a href="#">
-                    <span>1</span>
-                    <i></i>
-                    <p>Choissez un restaurant</p>
-                </a>
-                <i>Choisissez un restaurant</i>
-                <i>Composez votre menu</i>
-                <i>Déguster au restaurant</i>
+        <section class="tuto">
+            <div class="container">
+                <h2 class="tuto_title">Fonctionnement !</h2>
+                <ol class="tuto_steps">
+                    <li class="tuto_step">
+                        <i class="tuto_icon fas fa-mobile-alt"></i>
+                        <span class="text">Choisissez un restaurant</span>
+                    </li>
+                    <li class="tuto_step">
+                        <i class="tuto_icon fas fa-list-ul"></i>
+                        <span class="text">Composez votre menu</span>
+                    </li>
+                    <li class="tuto_step">
+                        <i class="tuto_icon fas fa-store"></i>
+                        <span class="text">Dégustez au restaurant</span>
+                    </li>
+                </ol>
             </div>
         </section>
 
-        <section id="restaurants">
-            <h1>Restaurants</h1>
+        <section class="restaurants" id="restaurants">
+            <div class="container">
+                <h1 class="restaurant_title">Restaurants</h1>
+
+                <div class="cards">
+                    <a class="card" href="./restaurants/la_palette_du_gout.html">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""
+                             class="card_img">
+                        <span class="card_badge">Nouveau</span>
+                        <footer class="card_footer">
+                            <div class="card_content">
+                                <h3 class="card_title">La palette du goût</h3>
+                                <span class="card_subtitle">Ménilmontant</span>
+                            </div>
+                            <div class="menu_btn card_btn">
+                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
+                    </a>
+                    <a class="card" href="./restaurants/la_note_enchantee.html">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="card_img">
+                        <span class="card_badge">Nouveau</span>
+                        <footer class="card_footer">
+                            <div class="card_content">
+                                <h3 class="card_title">La note enchantée</h3>
+                                <span class="card_subtitle">Charonne</span>
+                            </div>
+                            <div class="menu_btn card_btn">
+                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
+                    </a>
+
+                    <a class="card" href="./restaurants/a_la_francaise.html">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="card_img">
+                        <footer class="card_footer">
+                            <div class="card_content">
+                                <h3 class="card_title">À la française</h3>
+                                <span class="card_subtitle">Cité Rouge</span>
+                            </div>
+                            <div class="menu_btn card_btn">
+                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
+                    </a>
+
+                    <a class="card" href="./restaurants/le_delice_des_sens.html">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""
+                             class="card_img">
+                        <footer class="card_footer">
+                            <div class="card_content">
+                                <h3 class="card_title">Le délice des sens</h3>
+                                <span class="card_subtitle">Folie-Méricourt</span>
+                            </div>
+                            <div class="menu_btn card_btn">
+                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
-</body>
 
-<footer>
-    <div class="container">
-        <div class="footer_logo">ohmyfood</div>
-        <ul class="footer_list">
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li><a href="mailto:totogmail.com"> Contact</a> </li>
-        </ul>
-    </div>
-</footer>
+
+    <footer>
+        <div class="container">
+            <div class="footer_logo">ohmyfood</div>
+            <ul class="footer_list">
+                <li>Proposer un restaurant</li>
+                <li>Devenir partenaire</li>
+                <li>Mentions légales</li>
+            </ul>
+        </div>
+    </footer>
+</body>
 </html>
