Start setting index css

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <header id="logo-omf">
-        <img src="images/logo/ohmyfood.png" alt="logo oh my food">
-        <div class="localisation">
-            <div id="map"><i class="fas fa-map-marker-alt"></i>
-                <span>Paris, Belleville</span>
+    <header>
+        <div id="logo-omf">
+            <img src="images/logo/ohmyfood.png" alt="logo oh my food">
+            <div class="localisation">
+                <div id="map"><i class="fas fa-map-marker-alt"></i>
+                    <span>Paris, Belleville</span>
+                </div>
             </div>
         </div>
 
@@ -29,7 +31,7 @@
     <main>
         <section class="tuto">
             <div class="container">
-                <h2 class="tuto_title">Fonctionnement !</h2>
+                <h1 class="tuto_title">Fonctionnement </h1>
                 <ol class="tuto_steps">
                     <li class="tuto_step">
                         <i class="tuto_icon fas fa-mobile-alt"></i>
