Fix footer design & other index elements: header, buttons and cards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div id="logo-omf">
+        <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo oh my food">
             <div class="localisation">
                 <div id="map"><i class="fas fa-map-marker-alt"></i>
@@ -114,13 +114,22 @@
     </main>
 
 
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <div class="footer_logo">ohmyfood</div>
+            <span class="footer_logo">ohmyfood</span>
             <ul class="footer_list">
-                <li>Proposer un restaurant</li>
-                <li>Devenir partenaire</li>
-                <li>Mentions légales</li>
+                <li class="footer_listElement">
+                    <a class="footer_link" href="#"><i class="footer_icon fas fa-utensils"></i>Proposer un restaurant</a>
+                </li>
+                <li class="footer_listElement">
+                    <a class="footer_link" href="#"><i class="footer_icon fas fa-hands-helping"></i>Devenir partenaire</a>
+                </li>
+                <li class="footer_listElement">
+                    <a class="footer_link" href="#">Mentions légales</a>
+                </li>
+                <li class="footer_listElement">
+                    <a class="footer_link" href="mailto:ohmyfood-contact@gmail.com">Contact</a>
+                </li>
             </ul>
         </div>
     </footer>
