fix header and header logo menu + index

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -16,7 +16,7 @@
         <div class="arrow"><a href="../index.html"><i class="fas fa-arrow-left"></i></a>
         </div>
         <div class="logo">
-            <img src="../images/logo/ohmyfood.png" alt="logo oh my food">
+            <a href="../index.html"><img src="../images/logo/ohmyfood.png" alt="logo oh my food"></a>
         </div>
     </header>
 
