--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo/ohmyfood.png" alt="logo oh my food">
-            <div class="localisation">
-                <div id="map"><i class="fas fa-map-marker-alt"></i>
-                    <span>Paris, Belleville</span>
-                </div>
+            <a href="./index.html"><img src="./images/logo/ohmyfood.png" alt="logo oh my food"></a>
+        </div>
+        <div class="localisation">
+            <div id="map"><i class="fas fa-map-marker-alt"></i>
+                <span>Paris, Belleville</span>
             </div>
         </div>
 
@@ -24,7 +24,6 @@
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception , séléctionnés par nos soins</p>
             <button>Explorer nos restaurants</button>
-
         </div>
     </header>
 
