Add menus font + fix linear gradient + fix  home page cards

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/93a6073045.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="public/css/style.css" rel="stylesheet">
 </head>
 
@@ -27,7 +30,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main_index">
         <section class="tuto">
             <div class="container">
                 <h1 class="tuto_title">Fonctionnement </h1>
@@ -59,7 +62,7 @@
                         <span class="card_badge">Nouveau</span>
                         <footer class="card_footer">
                             <div class="card_content">
-                                <h3 class="card_title">La palette du goût</h3>
+                                <h2 class="card_title">La palette du goût</h2>
                                 <span class="card_subtitle">Ménilmontant</span>
                             </div>
                             <div class="menu_btn card_btn">
@@ -72,7 +75,7 @@
                         <span class="card_badge">Nouveau</span>
                         <footer class="card_footer">
                             <div class="card_content">
-                                <h3 class="card_title">La note enchantée</h3>
+                                <h2 class="card_title">La note enchantée</h2>
                                 <span class="card_subtitle">Charonne</span>
                             </div>
                             <div class="menu_btn card_btn">
@@ -85,7 +88,7 @@
                         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="card_img">
                         <footer class="card_footer">
                             <div class="card_content">
-                                <h3 class="card_title">À la française</h3>
+                                <h2 class="card_title">À la française</h2>
                                 <span class="card_subtitle">Cité Rouge</span>
                             </div>
                             <div class="menu_btn card_btn">
@@ -99,7 +102,7 @@
                              class="card_img">
                         <footer class="card_footer">
                             <div class="card_content">
-                                <h3 class="card_title">Le délice des sens</h3>
+                                <h2 class="card_title">Le délice des sens</h2>
                                 <span class="card_subtitle">Folie-Méricourt</span>
                             </div>
                             <div class="menu_btn card_btn">
