--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/93a6073045.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="../public/css/style.css" rel="stylesheet">
 </head>
 
@@ -20,13 +23,12 @@
         </div>
     </header>
 
-    <!-- Main -->
-    <main class="main">
         <div class="header_img">
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu a la francaise"
                  title="ohmyfood menu a la francaise">
         </div>
-        <div class="main_menu">
+    <!-- Main -->
+    <main class="main_menu">
             <div class="menu_title">
                 <h2>À la française</h2>
                 <div class="fill_heart">
@@ -149,7 +151,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         <div>
 
             <div class="btn_order">
