add heart animation + fix tuto steps

--- a/index.html
+++ b/index.html
@@ -32,22 +32,27 @@
 
     <main class="main_index">
         <section class="tuto">
-            <div class="container">
-                <h1 class="tuto_title">Fonctionnement </h1>
-                <ol class="tuto_steps">
-                    <li class="tuto_step">
-                        <i class="tuto_icon fas fa-mobile-alt"></i>
-                        <span class="text">Choisissez un restaurant</span>
-                    </li>
-                    <li class="tuto_step">
-                        <i class="tuto_icon fas fa-list-ul"></i>
-                        <span class="text">Composez votre menu</span>
-                    </li>
-                    <li class="tuto_step">
-                        <i class="tuto_icon fas fa-store"></i>
-                        <span class="text">Dégustez au restaurant</span>
-                    </li>
-                </ol>
+            <h1 class="tuto_title">Fonctionnement </h1>
+            <div class="tuto_step">
+                <div class="tuto_step_number">1</div>
+                <div class="tuto_step_content">
+                    <i class="tuto_icon fas fa-mobile-alt"></i>
+                    <span>Choississez un restaurant</span>
+                </div>
+            </div>
+            <div class="tuto_step">
+                <div class="tuto_step_number">2</div>
+                <div class="tuto_step_content">
+                    <i class="tuto_icon fas fa-list-ul"></i>
+                    <span>Composez votre menu</span>
+                </div>
+            </div>
+            <div class="tuto_step">
+                <div class="tuto_step_number">3</div>
+                <div class="tuto_step_content">
+                    <i class="tuto_icon fas fa-store"></i>
+                    <span>Dégustez au restaurant</span>
+                </div>
             </div>
         </section>
 
@@ -56,7 +61,7 @@
                 <h1 class="restaurant_title">Restaurants</h1>
 
                 <div class="cards">
-                    <a class="card" href="./restaurants/la_palette_du_gout.html">
+                    <a class="card" href="#">
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""
                              class="card_img">
                         <span class="card_badge">Nouveau</span>
@@ -65,8 +70,8 @@
                                 <h2 class="card_title">La palette du goût</h2>
                                 <span class="card_subtitle">Ménilmontant</span>
                             </div>
-                            <div class="menu_btn card_btn">
-                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            <div class="card_like">
+                                <i class="far fa-heart fa-2x"></i>
                             </div>
                         </footer>
                     </a>
@@ -78,8 +83,8 @@
                                 <h2 class="card_title">La note enchantée</h2>
                                 <span class="card_subtitle">Charonne</span>
                             </div>
-                            <div class="menu_btn card_btn">
-                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            <div class="card_like">
+                                <i class="far fa-heart fa-2x"></i>
                             </div>
                         </footer>
                     </a>
@@ -91,8 +96,8 @@
                                 <h2 class="card_title">À la française</h2>
                                 <span class="card_subtitle">Cité Rouge</span>
                             </div>
-                            <div class="menu_btn card_btn">
-                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            <div class="card_like">
+                                <i class="far fa-heart fa-2x"></i>
                             </div>
                         </footer>
                     </a>
@@ -105,8 +110,8 @@
                                 <h2 class="card_title">Le délice des sens</h2>
                                 <span class="card_subtitle">Folie-Méricourt</span>
                             </div>
-                            <div class="menu_btn card_btn">
-                                <i class="card_like nobg far fa-heart fa-2x"></i>
+                            <div class="card_like">
+                                <i class="far fa-heart fa-2x"></i>
                             </div>
                         </footer>
                     </a>
