--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"  rel="stylesheet">
     <link href="../public/css/style.css" rel="stylesheet">
 </head>
 
