--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"  rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="../public/css/style.css" rel="stylesheet">
 </head>
 
@@ -24,134 +24,135 @@
         </div>
     </header>
 
-        <div class="header_img">
-            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu a la francaise"
-                 title="ohmyfood menu a la francaise">
-        </div>
+    <div class="header_img">
+        <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu a la francaise"
+             title="ohmyfood menu a la francaise">
+    </div>
     <!-- Main -->
     <main class="main_menu">
-            <div class="menu_title">
-                <h2>À la française</h2>
-                <div class="fill_heart">
-                    <span><i class="fill far fa-heart fa-2x"></i></span>
-                </div>
+        <div class="menu_title">
+            <h2>À la française</h2>
+            <div class="fill_heart">
+                <span><i class="fill far fa-heart fa-2x"></i></span>
             </div>
-            <div class="full_menu">
-                <div class="starter">
-                    <div class="starter_title">
-                        <h3>ENTRÉES</h3>
-                        <div class="line"></div>
-                    </div>
+        </div>
 
-                    <!-- Entrées-->
-                    <div class="meals">
-                        <h4>Tartare de poulpe acidulé</h4>
-                        <div class="last_line">
-                            <p>Aux zestes d'orange</p>
-                            <span><strong>25€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
+        <!-- Entrées-->
+        <div class="full_menu">
+
+            <div class="submenu">
+                <div class="dish_title">
+                    <h3>ENTRÉES</h3>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h4>Tartare de poulpe acidulé</h4>
+                    <div class="last_line">
+                        <p>Aux zestes d'orange</p>
+                        <span><strong>25€</strong></span>
                     </div>
-                    <div class="meals">
-                        <h4>Velouté de légumes d'antan</h4>
-                        <div class="last_line">
-                            <p>Carotte, panais, topinambour</p>
-                            <span><strong>35€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
-                    </div>
-                    <div class="meals">
-                        <h4>Soupe à l'oignon</h4>
-                        <div class="last_line">
-                            <p>Revisitée</p>
-                            <span><strong>20€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
-
-                <!-- Plats principaux -->
-                <div class="dish">
-                    <div class="dish_title">
-                        <h3>PLATS</h3>
-                        <div class="line"></div>
+                <div class="meals">
+                    <h4>Velouté de légumes d'antan</h4>
+                    <div class="last_line">
+                        <p>Carotte, panais, topinambour</p>
+                        <span><strong>35€</strong></span>
                     </div>
-                    <div class="meals">
-                        <h4>Coquilles Saint-Jacques</h4>
-                        <div class="last_line">
-                            <p>Accompagnées d'une purée de panais</p>
-                            <span><strong>40€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
-                    </div>
-                    <div class="meals">
-                        <h4>Magret de canard</h4>
-                        <div class="last_line">
-                            <p>Et parmentier de pommes de terre</p>
-                            <span><strong>35€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
-                    </div>
-                    <div class="meals">
-                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                        <div class="last_line">
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                            <span><strong>44€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
-
-                <!-- Desserts -->
-                <div class="dessert">
-                    <div class="dessert_title">
-                        <h3>DESSERTS</h3>
-                        <div class="line"></div>
+                <div class="meals">
+                    <h4>Soupe à l'oignon</h4>
+                    <div class="last_line">
+                        <p>Revisitée</p>
+                        <span><strong>20€</strong></span>
                     </div>
-                    <div class="meals">
-                        <h4>Pétales de violettes glacés</h4>
-                        <div class="last_line">
-                            <p>Et purée de noisettes</p>
-                            <span><strong>18€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
-                    </div>
-                    <div class="meals">
-                        <h4>Fondant au chocolat</h4>
-                        <div class="last_line">
-                            <p>Revisité</p>
-                            <span><strong>22€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
-                    </div>
-                    <div class="meals">
-                        <h4>Millefeuille croustillant</h4>
-                        <div class="last_line">
-                            <p>Myrtilles et pâte d’amande</p>
-                            <span><strong>23€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"></i></span>
-                        </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
             </div>
+
+            <!-- Plats principaux -->
+            <div class="submenu">
+                <div class="dish_title">
+                    <h3>PLATS</h3>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h4>Coquilles Saint-Jacques</h4>
+                    <div class="last_line">
+                        <p>Accompagnées d'une purée de panais</p>
+                        <span><strong>40€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h4>Magret de canard</h4>
+                    <div class="last_line">
+                        <p>Et parmentier de pommes de terre</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                    <div class="last_line">
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <span><strong>44€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Desserts -->
+            <div class="submenu">
+                <div class="dish_title">
+                    <h3>DESSERTS</h3>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h4>Pétales de violettes glacés</h4>
+                    <div class="last_line">
+                        <p>Et purée de noisettes</p>
+                        <span><strong>18€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h4>Fondant au chocolat</h4>
+                    <div class="last_line">
+                        <p>Revisité</p>
+                        <span><strong>22€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h4>Millefeuille croustillant</h4>
+                    <div class="last_line">
+                        <p>Myrtilles et pâte d’amande</p>
+                        <span><strong>23€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div>
 
             <div class="btn_order">
