fix changes due to last corrections

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <div class="loader">
+    </div>
 
     <!-- Header -->
     <header class="menu_header">
@@ -32,8 +34,8 @@
     <main class="main_menu">
         <div class="menu_title">
             <h2>À la française</h2>
-            <div class="fill_heart">
-                <span><i class="fill far fa-heart fa-2x"></i></span>
+            <div class="card_like">
+                <i class="far fa-heart fa-2x"></i>
             </div>
         </div>
 
