--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 
+</div>
+
 <body>
-
-
 
 
     <header>
@@ -36,32 +36,34 @@
     </header>
 
     <main class="main_index">
-            <h1 class="tuto_title">Fonctionnement </h1>
         <section class="tuto">
-            <div class="tuto_step">
-                <div class="tuto_step_number">1</div>
-                <div class="tuto_step_content">
-                    <i class="tuto_icon fas fa-mobile-alt"></i>
-                    <span>Choississez un restaurant</span>
+            <div class="tuto_container">
+                <h1 class="tuto_title">Fonctionnement </h1>
+                <div class="tuto_step">
+                    <div class="tuto_step_number">1</div>
+                    <div class="tuto_step_content">
+                        <i class="tuto_icon fas fa-mobile-alt"></i>
+                        <span>Choississez un restaurant</span>
+                    </div>
                 </div>
-            </div>
-            <div class="tuto_step">
-                <div class="tuto_step_number">2</div>
-                <div class="tuto_step_content">
-                    <i class="tuto_icon fas fa-list-ul"></i>
-                    <span>Composez votre menu</span>
+                <div class="tuto_step">
+                    <div class="tuto_step_number">2</div>
+                    <div class="tuto_step_content">
+                        <i class="tuto_icon fas fa-list-ul"></i>
+                        <span>Composez votre menu</span>
+                    </div>
                 </div>
-            </div>
-            <div class="tuto_step">
-                <div class="tuto_step_number">3</div>
-                <div class="tuto_step_content">
-                    <i class="tuto_icon fas fa-store"></i>
-                    <span>Dégustez au restaurant</span>
+                <div class="tuto_step">
+                    <div class="tuto_step_number">3</div>
+                    <div class="tuto_step_content">
+                        <i class="tuto_icon fas fa-store"></i>
+                        <span>Dégustez au restaurant</span>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="restaurants" id="restaurants">
+        <section class="restaurants">
             <div class="container">
                 <h1 class="restaurant_title">Restaurants</h1>
 
@@ -95,7 +97,8 @@
                     </a>
 
                     <a class="card" href="./restaurants/a_la_francaise.html">
-                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="card_img">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""
+                             class="card_img">
                         <footer class="card_footer">
                             <div class="card_content">
                                 <h2 class="card_title">À la française</h2>
