Add loader and fix ellipsis issues

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -14,9 +14,7 @@
 </head>
 
 <body>
-    <div class="loader">
     </div>
-
     <!-- Header -->
     <header class="menu_header">
         <div class="arrow"><a href="../index.html"><i class="fas fa-arrow-left"></i></a>
@@ -53,7 +51,7 @@
                         <p>Aux zestes d'orange</p>
                         <span><strong>25€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -63,7 +61,7 @@
                         <p>Carotte, panais, topinambour</p>
                         <span><strong>35€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -73,7 +71,7 @@
                         <p>Revisitée</p>
                         <span><strong>20€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -91,7 +89,7 @@
                         <p>Accompagnées d'une purée de panais</p>
                         <span><strong>40€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -101,7 +99,7 @@
                         <p>Et parmentier de pommes de terre</p>
                         <span><strong>35€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -111,7 +109,7 @@
                         <p>Sur son lit de gnocchis aux légumes</p>
                         <span><strong>44€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -129,7 +127,7 @@
                         <p>Et purée de noisettes</p>
                         <span><strong>18€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -139,7 +137,7 @@
                         <p>Revisité</p>
                         <span><strong>22€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
@@ -149,7 +147,7 @@
                         <p>Myrtilles et pâte d’amande</p>
                         <span><strong>23€</strong></span>
                     </div>
-                    <div class="cross">
+                    <div class="check">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
