--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <title>Oh My Food</title>
@@ -12,11 +13,14 @@
     <link href="public/css/style.css" rel="stylesheet">
 </head>
 
-
-</div>
-
 <body>
-
+    <div class="loader">
+        <div class="loader_itemContainer">
+            <div class="loader_item loader_item_1"></div>
+            <div class="loader_item loader_item_2"></div>
+            <div class="loader_item loader_item_3"></div>
+        </div>
+    </div>
 
     <header>
         <div class="logo">
@@ -37,26 +41,26 @@
 
     <main class="main_index">
         <section class="tuto">
-            <div class="tuto_container">
-                <h1 class="tuto_title">Fonctionnement </h1>
+            <h1 class="tuto_title">Fonctionnement </h1>
+            <div class="tuto_steps">
                 <div class="tuto_step">
                     <div class="tuto_step_number">1</div>
                     <div class="tuto_step_content">
-                        <i class="tuto_icon fas fa-mobile-alt"></i>
+                        <i class="tuto_step_icon fas fa-mobile-alt"></i>
                         <span>Choississez un restaurant</span>
                     </div>
                 </div>
                 <div class="tuto_step">
                     <div class="tuto_step_number">2</div>
                     <div class="tuto_step_content">
-                        <i class="tuto_icon fas fa-list-ul"></i>
+                        <i class="tuto_step_icon fas fa-list-ul"></i>
                         <span>Composez votre menu</span>
                     </div>
                 </div>
                 <div class="tuto_step">
                     <div class="tuto_step_number">3</div>
                     <div class="tuto_step_content">
-                        <i class="tuto_icon fas fa-store"></i>
+                        <i class="tuto_step_icon fas fa-store"></i>
                         <span>Dégustez au restaurant</span>
                     </div>
                 </div>
