--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h1 class="restaurant_title">Restaurants</h1>
 
                 <div class="cards">
-                    <a class="card" href="#">
+                    <a class="card" href="./restaurants/la_palette_du_gout.html">
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""
                              class="card_img">
                         <span class="card_badge">Nouveau</span>
@@ -133,7 +133,7 @@
     </main>
 
 
-    <!-- Footer -->
+
     <footer class="footer">
         <div class="container">
             <div class="footer_logo">
@@ -166,6 +166,6 @@
             </ul>
         </div>
     </footer>
-    <!-- Footer -->
+
 </body>
 </html>
