--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <title>Oh My Food</title>
@@ -14,8 +15,6 @@
 </head>
 
 <body>
-    </div>
-    <!-- Header -->
     <header class="menu_header">
         <div class="arrow"><a href="../index.html"><i class="fas fa-arrow-left"></i></a>
         </div>
@@ -28,7 +27,7 @@
         <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu a la francaise"
              title="ohmyfood menu a la francaise">
     </div>
-    <!-- Main -->
+
     <main class="main_menu">
         <div class="menu_title">
             <h2>À la française</h2>
@@ -37,7 +36,7 @@
             </div>
         </div>
 
-        <!-- Entrées-->
+
         <div class="full_menu">
 
             <div class="submenu">
@@ -77,7 +76,7 @@
                 </div>
             </div>
 
-            <!-- Plats principaux -->
+
             <div class="submenu">
                 <div class="dish_title">
                     <h3>PLATS</h3>
@@ -115,7 +114,7 @@
                 </div>
             </div>
 
-            <!-- Desserts -->
+
             <div class="submenu">
                 <div class="dish_title">
                     <h3>DESSERTS</h3>
@@ -161,7 +160,7 @@
         </div>
     </main>
 
-    <!-- Footer -->
+
     <footer class="footer">
         <div class="container">
             <div class="footer_logo">
@@ -194,6 +193,5 @@
             </ul>
         </div>
     </footer>
-    <!-- Footer -->
 </body>
 </html>
